<resources>
    <string name="app_name">Mealy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Ingredients</string>
    <string name="title_notifications">Recipes</string> <!--change this for now-->
    <string name="title_shoppingList">Shopping List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_sort">Sort By</string>
    <string name="Recipe_Entry_prep_time">Prep Time:</string>
    <string name="Recipe_Entry_preparation_timeHour">hh</string>
    <string name="Recipe_Entry_preparation_timeMin">mm</string>
    <string name="Recipe_Entry_name">Name</string>
    <string name="Recipe_Entry_recipe_name">Recipe Name:</string>
    <string name="Recipe_Entry_enter_comments">Boil 5L water...</string>
    <string name="Recipe_Entry_comments">Comments:</string>
    <string name="Recipe_Entry_category">Category</string>
    <string name="Recipe_Entry_categoryTextView">Category:</string>
    <string name="Recipe_Entry_servings">Servings:</string>
    <string name="Recipe_Entry_add_edit_recipe">Add/Edit Recipe</string>
    <string name="Recipe_Entry_save">SAVE</string>
    <string name="Recipe_Entry_add_ingredient_to_recipe">Add Ingredient to Recipe</string>
    <string name="Recipe_Entry_enter_servings">1,2,3...</string>
    <string name="Recipe_Entry_add_image_to_recipe">Add Image to Recipe</string>
    <string name="ingredient_sort">Sort By</string>
    <string name="TEMP">TEMP</string>
    <string name="Recipe_Ingredient_save">SUBMIT</string>
    <string name="Meal_Name">Title</string>
    <string name="Meal_Name_Plan">Title:</string>
    <string name="Meal_Plan_submit">SUBMIT</string>
    <string name="meal_Plan_add">Add Recipe/Ingredient to Meal Plan</string>
    <string name="select_ir">Select Ingredient/Recipe</string>
    <string name="ir">Ingredient/Recipe</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>

</resources>