<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/accent_grey"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:minHeight="48sp"
            android:text="Add/Edit Ingredient/Recipe"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/accent_grey"
            android:textStyle="bold"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/circle"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ir_select"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10sp"
                android:layout_weight="1"
                android:textColor="@color/dark_gray"
                android:text="@string/select_ir"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/ir_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ir"
                android:minHeight="48dp"
                android:spinnerMode="dropdown"
                android:background="@drawable/spinner_bg"
                style="@style/Widget.AppCompat.Spinner"
                android:stateListAnimator="@drawable/spinner_sla"
                android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:minHeight="48sp"
                style="@style/ButtonStyle"
                android:id="@+id/add_ir"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Meal_Plan_submit" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
